--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "env": {
-    "jest": true
+    "jest": true,
+    "browser": true,
+    "node": true,
+    "es6": true
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -34,6 +37,9 @@
     ],
     "no-await-in-loop": "error",
     "no-console": 0,
-    "no-return-await": "error"
+    "no-return-await": "error",
+    "@typescript-eslint/member-delimiter-style": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "react/prop-types": 0
   }
 }
