First working version

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "use-typed-event-listener": "^2.0.0"
   },
   "scripts": {
     "start": "yarn watch:css & react-scripts start",
